db retrievel & actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "coursestable",
         "curdatetime",
         "dskill",
+        "lastaccess",
         "listcourses",
         "mathop",
         "nums"
