--- a/09_EXPRESS/package.json
+++ b/09_EXPRESS/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
