--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,14 @@
       {
         "duplicate-id-aria": "off"
       }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "meta[name=theme-color]"
+        ]
+      }
     ]
   }
 }
